# FileSplitter

./: .gitignore  LICENSE  README.md  cli.py  config.json  config.py  discovery.py  ffmpeg.py  pyproject.toml  splitter.py
